--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-/target
-/logs
-/.idea
-/*.iml
-/.class
+*.classpath
+*.DS_Store
+**/.idea/*
+**/target/*
+**.log
+**.iml
+**.sum
+**/.settings/*
+**.project
+*/client/package-lock.json
+.scannerwork
+.idea
+.vscode
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
