--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,7 +3,8 @@ jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.username=root
 jdbc.password=123456
 
-entity.package=com.example.database.demo.entity
+package.entity=com.example.database.demo.entity
+package.mapper=com.example.database.demo.mapper
 
 mapper.resources[0]=mapper/UserMapper.xml
 #mapper.resources[1]=mapper/CarMapper.xml
